--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "start": "electron ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "@6c65726f79/custom-titlebar": "^0.9.1"
+  },
   "devDependencies": {
     "electron": "20.0.1"
   }
